# cGameEngine

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  asd  camera.c  camera.h  cgame  collision.c  collision.h  error.c  error.h  game.c  game.h  game.old.c  gl_program.c  gl_program.h  inmgr.c  input_manager.c  input_manager.h  level.c  level.h  main.c  sprite.h  strdup.h  texture.h  todo.txt  user.c  user.h  vertex.c  window.c  window.h  x.c
math_lib/: Makefile  README
mrb_lib/: .quad_tree.h.swp  Makefile  aabb.c  aabb.h  array.c  array.h  camera.c  camera.h  ds_common.h  file_buf.c  file_buf.h  file_get.c  file_get.h  font.c  font.h  gl_program.c  gl_program.h  glyph.h  inmgr.c  inmgr.h  list.c  list.h  mat4f.c  mat4f.h  quad_tree.c  quad_tree.h  simple_sprite.c  simple_sprite.h  sprite.c  sprite.h  sprite_batch.c  sprite_batch.h  strdup.h  test.c  text_renderer.c  text_renderer.h  texture.c  texture.h  timer.c  timer.h  (+7 more)
resources/: level1.txt
shaders/: color_shader.fs  color_shader.vs  sprite_shader.1.20.fs  sprite_shader.1.20.vs  sprite_shader.fs  sprite_shader.vs
test/: Makefile  camera.c  camera.h  test.c
